--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "dev": "nodemon server.js",
+        "dev": "nodemon --ignore 'db.json' server.js",
         "lint": "npx eslint .",
         "lint-fix": "npx eslint . --fix"
     },
@@ -21,7 +21,10 @@
         "eslint": "^7.15.0",
         "export-to-csv": "^0.2.1",
         "express": "^4.17.1",
+        "express-validator": "^6.8.0",
         "git-url-parse": "^11.4.0",
+        "lowdb": "^1.0.0",
+        "node-uuid": "^1.4.8",
         "nodemon": "^2.0.6",
         "winston": "^3.3.3"
     }
