--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "dev": "nodemon --ignore 'db.json' server.js",
+        "dev": "nodemon server.js",
         "lint": "npx eslint .",
         "lint-fix": "npx eslint . --fix"
     },
@@ -13,6 +13,9 @@
     "author": "Thiago Ferreira",
     "license": "MIT",
     "homepage": "https://github.com/iselab-dearborn/github-info",
+    "nodemonConfig": {
+        "ignore": ["data/*"]
+    },
     "dependencies": {
         "@octokit/rest": "^18.0.12",
         "body-parser": "^1.19.0",
